data/derived/sp14/progs/unify/prog2403.ml.out
Characters 8-18:
  let _ = mulByDigit -9 [];;
          ^^^^^^^^^^
Error: This expression has type int -> int list -> int list
       but an expression was expected of type int
